--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 body {
     background: black url('images/background.jpg') top center no-repeat;
     font-size: 20px;
-    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial sans-serif;
     font-weight: lighter;
     text-align: center;
     padding: 40px;
     color: #333;
     -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
+    text-rendering: optimizelegibility;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 form {
-    text-align: center;
+    text-align: left;
     width: 300px;
     margin: 20px auto 0;
 }
